+ added new method (getApplicationsOfUsers(Collection<User>, Sort)) to ApplicationService interface and implemented it in RepositoryApplicationService + added new method (getStaffMembersOfUser(User)) to UserService interface and implemented it in LdapUserService + added new REST endpoint (/users/{userId}/staff/applications) to retrieve the application of all staff members of a given user + added new repository method (findAllByUserIn(Iterable<User>, Sort)) to ProjectApplicationRepository + added tests for new methods